First commit - add frontend and backend